Add 'module update' and 'module remove' commands